--- a/index.css
+++ b/index.css
@@ -3,8 +3,7 @@ body{
     background-color: #F7CAC9;
    /* background-color: #FDDCE2;*/
     border: solid black 2px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     max-width: 650px;
     margin: auto;
     margin-top: 10px ;
